# chip8-emulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: Metal_Blit.h.FAAC16434CE2CB16.idx  SDL.c.DFAB2AB1F98D46ED.idx  SDL.h.BB8B2CED888EB5CF.idx  SDL_RLEaccel.c.5EB643EB14DC57E3.idx  SDL_RLEaccel_c.h.D2C4E45140DB531F.idx  SDL_assert.c.4642FF56B690BD30.idx  SDL_assert.h.1AEB787D9D75D66E.idx  SDL_assert_c.h.356A13FEF59F51D0.idx  SDL_asyncio.c.8385C600A3B04604.idx  SDL_asyncio.h.196128D77E21785F.idx  SDL_asyncio_c.h.D02394171458216A.idx  SDL_asyncio_generic.c.7DB8843CB77DBEE2.idx  SDL_atomic.c.CF25C9FF315446C5.idx  SDL_atomic.h.0B7FA4D51DF6FC12.idx  SDL_audio.c.CE24BB105A2BBBDD.idx  SDL_audio.h.4A4E89B003F6E8FC.idx  SDL_audio_c.h.7FF6F7C27CFE82A0.idx  SDL_audio_channel_converters.h.99DB1ABC90585960.idx  SDL_audiocvt.c.F58CF24C59EE9BE5.idx  SDL_audiodev.c.9E168B33CE0C5A20.idx  SDL_audioqueue.c.69AD8C99D30B0B38.idx  SDL_audioqueue.h.C8487D28DC5FBA23.idx  SDL_audioresample.c.0BA77136DD504959.idx  SDL_audioresample.h.378D242BB816961B.idx  SDL_audiotypecvt.c.A57E9D7C43014261.idx  SDL_begin_code.h.6B935E1FF219FCA9.idx  SDL_bits.h.BF1AAE7CB0AF0B13.idx  SDL_blendfillrect.c.03A81338DD15E326.idx  SDL_blendfillrect.h.BCCD5D10A8133713.idx  SDL_blendline.c.DEABD60E7851E074.idx  SDL_blendline.h.0A04ECF6DDEF8A91.idx  SDL_blendmode.h.B2978C0690F64D4C.idx  SDL_blendpoint.c.2AE51DD576D5B375.idx  SDL_blendpoint.h.7DAC861E8F7822C8.idx  SDL_blit.c.58D5215F28BCF642.idx  SDL_blit.h.65AC76378BE9A5E1.idx  SDL_blit_0.c.5024022D73717C22.idx  (+502 more)
include/: chip8.h
src/: chip8.c  main.c
